feat: udistrital/sga_documentacion#113 Actualizacion de los modelos y el .sql que permite la inclusion de los nuevos campos solicitados por el cliente
