# swagger/swagger.yml
@@ -1300,6 +1300,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      ExamenEstado:
+        type: boolean
       FechaCreacion:
         type: string
       FechaModificacion:
@@ -1327,6 +1329,10 @@ definitions:
       Id:
         type: integer
         format: int64
+      OfertarOpcion2:
+        type: boolean
+      OfertarOpcion3:
+        type: boolean
       PeriodoId:
         type: integer
         format: int64
@@ -1336,6 +1342,9 @@ definitions:
         type: number
         format: double
       ProgramaAcademicoId:
+        type: integer
+        format: int64
+      PuntajeMinimoExamenEstado:
         type: integer
         format: int64
       RequisitoId:
